<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.windowremote.MainActivity" >

    <TextView
        android:id="@+id/epoch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <SeekBar
        android:id="@+id/seekBarPosition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/epoch"
        android:layout_marginTop="132dp" />

    <SeekBar
        android:id="@+id/seekBarTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/seekBarPosition"
        android:layout_marginTop="89dp" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/seekBarTime"
        android:layout_alignLeft="@+id/seekBarTime"
        android:layout_marginBottom="38dp"
        android:text="@string/setTime"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/seekBarPosition"
        android:layout_alignLeft="@+id/seekBarPosition"
        android:layout_marginBottom="42dp"
        android:text="@string/setPosition"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewPositionCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/seekBarPosition"
        android:layout_below="@+id/seekBarPosition"
        android:text="@string/positionCounter" />

    <TextView
        android:id="@+id/textViewTimeCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/seekBarTime"
        android:layout_below="@+id/seekBarTime"
        android:text="@string/timeCounter" />

    <Button
        android:id="@+id/buttonGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/buttonGo" />

</RelativeLayout>
